--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,25 +8,30 @@
   url = "#about"
   weight = 10
 
+#[[main]]
+#  name = "Posts"
+#  url = "#posts"
+#  weight = 20
+
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "Research"
+  url = "#research"
   weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
+  name = "Teaching"
+  url = "#teaching"
   weight = 30
 
 [[main]]
-  name = "Talks"
-  url = "#talks"
+  name = "Industry"
+  url = "#Industry"
   weight = 40
 
-[[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 50
+#[[main]]
+#  name = "Publications"
+#  url = "#featured"
+#  weight = 50
 
 [[main]]
   name = "Contact"
